fix(task): SQL result with duplicated column name (#479)